Section Média - manque le video player

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -388,6 +388,43 @@ header .intro-text {
 	padding: 10px 0 0 0;
 	color: #888;
 }
+/* Section nos partenaires*/
+#partenaires {
+	padding: 100px 0;
+	background: #f6f6f6;
+}
+#partenaires i.fa {
+	font-size: 38px;
+	margin-bottom: 20px;
+	transition: all 0.5s;
+	color: #fff;
+	width: 100px;
+	height: 100px;
+	padding: 30px 0;
+	border-radius: 50%;
+    background: linear-gradient(to right, #000000 20%, #14172a 100%);
+	box-shadow: 10px 10px 10px rgba(0,0,0,.05);
+}
+/* Section nos media*/
+#media {
+	padding: 100px 0;
+	background: #000000;
+}
+#media h2 {
+	color: #ffffff;
+}
+#media i.fa {
+	font-size: 38px;
+	margin-bottom: 20px;
+	transition: all 0.5s;
+	color: #fff;
+	width: 100px;
+	height: 100px;
+	padding: 30px 0;
+	border-radius: 50%;
+    background: linear-gradient(to right, #000000 20%, #14172a 100%);
+	box-shadow: 10px 10px 10px rgba(0,0,0,.05);
+}
 /* Contact Section */
 #contact {
 	padding: 100px 0 60px 0;
