--- a/public/css/style.css
+++ b/public/css/style.css
@@ -662,7 +662,7 @@ label {
   color: rgba(255, 255, 255, 0.75);
   border-radius: 8px;
   text-align: center;
-  max-height: 200px;
+  /* max-height: 200px; */
   display: flex;
   flex-direction: column;
 }
@@ -682,4 +682,52 @@ label {
 
 .disabled-btn:hover {
   color: #c12026;
+}
+
+/* Coupon Styling */
+.couponInputWrapper {
+  justify-content: center;
+  margin-top: 1.5rem;
+  font-family: "Raleway", sans-serif;
+}
+
+.couponInputContainer {
+  align-items: center;
+  display: flex;
+}
+
+.couponInput {
+  width: 80%;
+  border-radius: 1rem;
+  padding: 0.5rem;
+  color: black;
+  outline: none;
+}
+
+.couponAddButton {
+  margin-left: 1rem;
+  width: 20%;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+}
+
+.couponAddButton:disabled,
+.couponAddButton:disabled:hover {
+  background-color: gray;
+}
+
+.couponInput:disabled {
+  background-color: green;
+  font-weight: bold;
+}
+
+.couponAddButton:hover {
+  background-color: #cc0033;
+}
+
+.couponMessage {
+  margin-top: 1rem;
+  color: white;
+  font-weight: bold;
 }
